CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The texttops filter did not properly recognize the
	  "nowrap" (wrap=false) option.
	- The InstallableOptions group name in a PPD file is now
	  translated separately (CUPS_MSG_OPTIONS_INSTALLED) so
	  that UIs can accurately detect the presence of this
	  group.
	- The scheduler no longer keeps job history data for
	  remote printers on the client (just on the server.)
	- The parallel and USB backends now retry if the backend
	  detects that the printer is not connected to the
	  system (rather than stopping the queue...)
	- The network backends now retry if the backend detects
	  that the printer is not connected to the network or is
	  unreachable (rather than stopping the queue...)
	- The cupsGetDests() function no longer lists options
	  and instances for printers that no longer exist.
	- The scheduler now converts the document language to
	  the correct LANG string.
	- The cupsaddsmb program now supports alternative CUPS
	  and SAMBA server names.
	- The PostScript filter now supports the Orientation
	  comment and rotates the page as needed automatically.
	- Revamped the makefiles slightly to use automatically
	  generated dependencies.
	- Build fixes for OS X.
	- The TIFF reading code depended on the newest version
	  of libtiff; now conditionally compile that portion of
	  the loader.
	- The PPD code now decodes all JCL options in the
	  JCLSetup group, not just those options that start with
	  the prefix "JCL".
	- The backends now read print data using the read()
	  system call to ensure that the current page is printed
	  while the next page is being processed.
	- The pdftops filter did not support shading type 3
	  (radial fill) for the "sh" operator.
	- The cups-polld program now throttles the local
	  broadcasts of polled printers and classes so that the
	  local system is not overwhelmed with hundreds of